--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#server.servlet.context-path=/api
 
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test_springboot?serverTimezone=UTC
+spring.datasource.driver=com.mysql.jdbc.Driver
+spring.datasource.username=jozinho
+spring.datasource.password=Archimede2021-
+
+spring.security.user.name=joss
+spring.security.user.password=joss
