communication avec BDD mySQL ok, reste toujours la sécu à voir

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,9 @@ spring.datasource.driver=com.mysql.jdbc.Driver
 spring.datasource.username=jozinho
 spring.datasource.password=Archimede2021-
 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 spring.security.user.name=joss
 spring.security.user.password=joss
