--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,14 +1,4 @@
-hibernate.connection.driver_class=com.mysql.jdbc.Driver
+#hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#hibernate.show_sql=true
 
-hibernate.connection.url=jdbc:mysql://127.0.0.1:3306/isthme?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-hibernate.connection.username=jozinho
-hibernate.connection.password=Archimede2021-
-
-#hibernate.connection.url=jdbc:mysql://92.222.139.190:3306/isthmejjozinho
-#hibernate.connection.username=
-#hibernate.connection.password=
-
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
-hibernate.show_sql=true
-
-hibernate.hbm2ddl.auto=update
+#hibernate.hbm2ddl.auto=create
