--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 #server.servlet.context-path=/api
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test_springboot?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/sb?serverTimezone=UTC
 spring.datasource.driver=com.mysql.jdbc.Driver
 spring.datasource.username=jozinho
 spring.datasource.password=Archimede2021-
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
 
 spring.security.user.name=joss
 spring.security.user.password=joss
