--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/sb?serverTimezone=UTC
 spring.datasource.driver=com.mysql.jdbc.Driver
-spring.datasource.username=${database.username}
-spring.datasource.password=${database.password}
+spring.datasource.username=${db.username}
+spring.datasource.password=${db.password}
 
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 #spring.security.user.name=joss
