test Custom Annotations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=${db.username}
 spring.datasource.password=${db.password}
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=false
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 #spring.security.user.name=joss
