--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 app.encoding=@project.build.sourceEncoding@
 app.java.version=@java.version@
+
+spring.batch.job.enabled=false
+book.csv.input=books.csv
+spring.batch.initialize-schema=ALWAYS
