add ConfigurationPorperties pour le test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ app.java.version=@java.version@
 spring.batch.job.enabled=false
 book.csv.input=books.csv
 spring.batch.initialize-schema=ALWAYS
+
+spring.output.ansi.enabled=always
